# controller/chat.go
@@ -9,7 +9,9 @@ import (
 	"github.com/gin-gonic/gin"
 	"io"
 	"net/http"
+	"strconv"
 	"strings"
+	"time"
 )
 
 // Chat 发送消息
@@ -19,6 +21,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param chatModel body model.ChatReq true "chatModel"
+// @Param proxy-secret header string false "proxy-secret"
 // @Success 200 {object} model.ReplyResp "Successful response"
 // @Router /api/chat [post]
 func Chat(c *gin.Context) {
@@ -36,7 +39,7 @@ func Chat(c *gin.Context) {
 	sentMsg, err := discord.SendMessage(chatModel.ChannelId, chatModel.Content)
 	if err != nil {
 		c.JSON(http.StatusOK, gin.H{
-			"success": true,
+			"success": false,
 			"message": "discord发送消息异常",
 		})
 		return
@@ -50,10 +53,20 @@ func Chat(c *gin.Context) {
 	discord.ReplyStopChans[sentMsg.ID] = stopChan
 	defer delete(discord.ReplyStopChans, sentMsg.ID)
 
+	timer, err := setTimerWithHeader(chatModel.Stream, common.RequestOutTimeDuration)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"success": false,
+			"message": "超时时间设置异常",
+		})
+		return
+	}
+
 	if chatModel.Stream {
 		c.Stream(func(w io.Writer) bool {
 			select {
 			case reply := <-replyChan:
+				timerReset(chatModel.Stream, timer, common.RequestOutTimeDuration)
 				urls := ""
 				if len(reply.EmbedUrls) > 0 {
 					for _, url := range reply.EmbedUrls {
@@ -62,6 +75,9 @@ func Chat(c *gin.Context) {
 				}
 				c.SSEvent("message", reply.Content+urls)
 				return true // 继续保持流式连接
+			case <-timer.C:
+				// 定时器到期时，关闭流
+				return false
 			case <-stopChan:
 				return false // 关闭流式连接
 			}
@@ -73,6 +89,12 @@ func Chat(c *gin.Context) {
 			case reply := <-replyChan:
 				replyResp.Content = reply.Content
 				replyResp.EmbedUrls = reply.EmbedUrls
+			case <-timer.C:
+				c.JSON(http.StatusOK, gin.H{
+					"success": false,
+					"message": "request_out_time",
+				})
+				return
 			case <-stopChan:
 				c.JSON(http.StatusOK, gin.H{
 					"success": true,
@@ -91,6 +113,7 @@ func Chat(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param request body model.OpenAIChatCompletionRequest true "request"
+// @Param Authorization header string false "Authorization"
 // @Success 200 {object} model.OpenAIChatCompletionResponse "Successful response"
 // @Router /v1/chat/completions [post]
 func ChatForOpenAI(c *gin.Context) {
@@ -139,11 +162,21 @@ func ChatForOpenAI(c *gin.Context) {
 	discord.ReplyStopChans[sentMsg.ID] = stopChan
 	defer delete(discord.ReplyStopChans, sentMsg.ID)
 
+	timer, err := setTimerWithHeader(request.Stream, common.RequestOutTimeDuration)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"success": false,
+			"message": "超时时间设置异常",
+		})
+		return
+	}
+
 	if request.Stream {
 		strLen := ""
 		c.Stream(func(w io.Writer) bool {
 			select {
 			case reply := <-replyChan:
+				timerReset(request.Stream, timer, common.RequestOutTimeDuration)
 				newContent := strings.Replace(reply.Choices[0].Message.Content, strLen, "", 1)
 				if newContent == "" && strings.HasSuffix(newContent, "[DONE]") {
 					return true
@@ -154,6 +187,10 @@ func ChatForOpenAI(c *gin.Context) {
 				bytes, _ := common.Obj2Bytes(reply)
 				c.SSEvent("", " "+string(bytes))
 				return true // 继续保持流式连接
+			case <-timer.C:
+				// 定时器到期时，关闭流
+				c.SSEvent("", " [DONE]")
+				return false
 			case <-stopChan:
 				c.SSEvent("", " [DONE]")
 				return false // 关闭流式连接
@@ -165,10 +202,56 @@ func ChatForOpenAI(c *gin.Context) {
 			select {
 			case reply := <-replyChan:
 				replyResp = reply
+			case <-timer.C:
+				c.JSON(http.StatusOK, model.OpenAIErrorResponse{
+					OpenAIError: model.OpenAIError{
+						Message: "请求超时",
+						Type:    "request_error",
+						Code:    "request_out_time",
+					},
+				})
+				return
 			case <-stopChan:
 				c.JSON(http.StatusOK, replyResp)
 				return
 			}
 		}
 	}
+}
+
+func setTimerWithHeader(isStream bool, defaultTimeout time.Duration) (*time.Timer, error) {
+	var outTimeStr string
+	if isStream {
+		outTimeStr = common.StreamRequestOutTime
+	} else {
+		outTimeStr = common.RequestOutTime
+	}
+	if outTimeStr != "" {
+		outTime, err := strconv.ParseInt(outTimeStr, 10, 64)
+		if err != nil {
+
+			return nil, err
+		}
+		return time.NewTimer(time.Duration(outTime) * time.Second), nil
+	}
+	return time.NewTimer(defaultTimeout), nil
+}
+
+func timerReset(isStream bool, timer *time.Timer, defaultTimeout time.Duration) error {
+	var outTimeStr string
+	if isStream {
+		outTimeStr = common.StreamRequestOutTime
+	} else {
+		outTimeStr = common.RequestOutTime
+	}
+	if outTimeStr != "" {
+		outTime, err := strconv.ParseInt(outTimeStr, 10, 64)
+		if err != nil {
+			return err
+		}
+		timer.Reset(time.Duration(outTime) * time.Second)
+		return nil
+	}
+	timer.Reset(defaultTimeout)
+	return nil
 }
