# docs/swagger.json
@@ -95,6 +95,12 @@
             "schema": {
               "$ref": "#/definitions/model.ChatReq"
             }
+          },
+          {
+            "type": "string",
+            "description": "proxy-secret",
+            "name": "proxy-secret",
+            "in": "header"
           }
         ],
         "responses": {
@@ -163,6 +169,12 @@
             "schema": {
               "$ref": "#/definitions/model.OpenAIChatCompletionRequest"
             }
+          },
+          {
+            "type": "string",
+            "description": "Authorization",
+            "name": "Authorization",
+            "in": "header"
           }
         ],
         "responses": {
